--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,2 @@
-org.gradle.java.home=C:/Program Files/Java/jdk-25
+# Gradle properties
+# org.gradle.java.home is not set, allowing Gradle to use JAVA_HOME or auto-detect Java
