--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,15 @@ spring.jpa.properties.hibernate.format_sql=true
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# JWT Configuration
+jwt.secret=your-256-bit-secret-key-change-this-in-production-environment-make-it-long-and-secure
+jwt.expiration=2592000000
+# 30 days in milliseconds
+
+# OTP Configuration
+otp.expiration=300
+# 5 minutes in seconds
+otp.length=6
+otp.max.attempts=3
+otp.rate.limit.minutes=10
